welcome.lessons.welcome.bat.bool1.SleepIn.scala.code
def sleepIn(weekday:Boolean, vacation:Boolean): Boolean = {
	var weekday
	var vacation
	if (vacation==true) { 
		return true
	}else if (weekday && !vacation){
		return false
	} 
	
}
